@@ -3,12 +3,12 @@
 <!-- :xml.root=users-guide.xml: -->
 
 <chapter id="starting"><title>Starting jEdit</title>
- <sect1 id="starting-any-os"><title>Platform-Independent Instructions</title>
+ <!-- sect1 id="starting-any-os"><title>Platform-Independent Instructions</title -->
   <para>
    Exactly how jEdit is started depends on the operating system. For example, on Unix you can run <quote>jedit</quote> at the command line,
-   or select jEdit from a menu; on Windows, you can
-   use the jEditLauncher package, which is documented in
-   <xref linkend="starting-windows" />.
+   or select jEdit from a menu; on Windows, you can double-click on the jEdit icon or select it from the <guimenu>Start</guimenu> menu.
+   <!-- use the jEditLauncher package, which is documented in
+   <xref linkend="starting-windows" />. -->
   </para>
   <para>
    If jEdit is started while another copy is already running, control is
@@ -34,10 +34,10 @@
   <para>
    For more information about command line switches that control the
    server feature, see <xref linkend="cli-usage" />.
-   Note that if you are using <application>jEditLauncher</application>
+   <!-- Note that if you are using <application>jEditLauncher</application>
    to start jEdit on Windows, this switch cannot be specified on the
    MS-DOS prompt command line when starting jEdit; it must be set as described
-   in <xref linkend="launcher-starting" />.
+   in <xref linkend="launcher-starting" />. -->
   </para>
   <para>
    jEdit remembers open buffers, views and split window configurations between editing sessions, so you can get back to work immediately after starting jEdit. This feature can be
@@ -63,8 +63,8 @@
     disabled by specifying the <userinput>-noserver</userinput> command line switch.
    </para>
   </sidebar>
- </sect1>
- <sect1 id="starting-windows"><title>Starting jEdit on Windows</title>
+ <!-- /sect1 -->
+ <!-- sect1 id="starting-windows"><title>Starting jEdit on Windows</title>
   <para>
    jEdit bundles the <emphasis>jEditLauncher</emphasis> package and automatically installs it on Windows. jEditLauncher is a set of components that make it easy to start jEdit, manage its command
    line settings, and launch files and macro scripts.
@@ -105,19 +105,19 @@
    For a more detailed description of all features found in
    the jEditLauncher package, see <xref linkend="launcher-guide"/>.
   </para>
- </sect1>
+ </sect1 -->
 
  <sect1 id="cli-usage"><title>Command Line Usage</title>
   <para>
    On operating systems that support a command line, jEdit can be passed
    various arguments to control its behavior.
   </para>
-  <para>
+  <!-- para>
    If you are using <application>jEditLauncher</application>
    to start jEdit on Windows, only file names can be specified
    on the command line; the parameters documented below must be set as described
    in <xref linkend="launcher-starting" />.
-  </para>
+  </para -->
   <para>
    When opening files from the command line, a line number or marker to
    position the caret on can be specified like so:
@@ -234,7 +234,7 @@
   </sect2>
   <sect2><title>Edit Server Options</title>
    <para>
-   See <xref linkend="starting-any-os" /> for a brief description of the edit server.
+   See <xref linkend="starting" /> for a brief description of the edit server.
    </para>
    <informaltable>
    <tgroup cols="2">
